projects/examples/source/07.17.cpp
//////////////////////////////////////////////

// chapter : Debugging and Profiling

//////////////////////////////////////////////

// section : Software Analysis Tools

//////////////////////////////////////////////

// content : Utility Valgrind

//////////////////////////////////////////////

// support : valgrind --leak-check=yes ./07.17

//////////////////////////////////////////////

#include <cassert>

//////////////////////////////////////////////

int main() 
{
	auto array = new int[5]{ 1, 2, 3, 4, 5 };

//  -----------------------------------------

	assert(array[5] == 0);

//  -----------------------------------------

//  delete[] array; // error

//  -----------------------------------------

	assert(array[0] == 1);
}

//////////////////////////////////////////////